<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/input_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_hint"
        android:inputType="text"
        android:imeOptions="actionGo" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_response"
        style="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/text_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body1"
        tools:text="Polo"/>

</LinearLayout>
